@@ -4,6 +4,13 @@ NEWS for veteran Window Maker users
 
 --- 0.53.0
 
+
+KDE 1.1 compatibility
+---------------------
+
+
+
+
 New Options
 -----------
 
